# qstudio

./: Cargo.toml  Readme.md  Roadmap.md  qql.md
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml  release.yml
crates/busbar/: Cargo.toml
crates/busbar/src/: aluminum.rs  copper.rs  lib.rs  transferswitch.rs
crates/busbar/src/busway/: battery.rs  mod.rs
crates/busbar/src/busway/taps/: mod.rs
crates/engine/: Cargo.toml
crates/engine/examples/: basic.rs  test_queries.rs
crates/engine/src/: calculation.rs  lexer.rs  lib.rs  output.rs  parser.rs  runtime.rs
crates/engine/src/controllers/: historical.rs  mod.rs
crates/engine/src/shaders/: axpb_index.wgsl  band_from_vol.wgsl  constant_fill.wgsl  difference_pair.wgsl  linreg_apply.wgsl  linreg_reduce.wgsl  mul_index.wgsl  reduce_sum.wgsl  sma_centered.wgsl  volatility_triplet.wgsl  volatility_vol_only.wgsl
crates/engine/src/utils/: action.rs  graph.rs  mod.rs  trade.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/events/src/events/: dock.rs  engine.rs  files.rs  mod.rs  notifications.rs
crates/qstudio_tcp/: Cargo.toml
crates/qstudio_tcp/src/: client.rs  lib.rs  server.rs
crates/qstudio_ui/: Cargo.toml
crates/qstudio_ui/src/: lib.rs  window.rs
crates/qstudio_ui/src/components/: bottombar.rs  leftbar.rs  mod.rs  rightbar.rs  topbar.rs
crates/qstudio_ui/src/components/dock/: editor.rs  graph.rs  mod.rs  table.rs  trade.rs
crates/qstudio_ui/src/components/sidebar/: engine.rs  filetree.rs  mod.rs  settings.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs  themes.rs
engine/: Cargo.toml
engine/src/: calculation.rs  lexer.rs  lib.rs  parser.rs
engine/src/controllers/: fundamentals.rs  historical.rs  live.rs  mod.rs
engine/src/utils/: trade.rs
prompts/: code_wrapper_prompt.txt  text_wrapper_prompt.txt
qstudio/: Cargo.toml
qstudio/src/: ff.rs  graph.rs  lib.rs  main.rs  menubar.rs  models.rs  preview.rs  server.rs  tick.rs  utils.rs
qstudio/src/models/: engine.rs  mod.rs  notification.rs  ui.rs
qstudio/src/views/: editor.rs  mod.rs  searchbar.rs
qstudio/src/views/dock/: editor.rs  graph.rs  mod.rs  table.rs  trade.rs
qstudio/src/views/sidebar/: active_engines.rs  filetree.rs  mod.rs  settings.rs
test queries/: test.qql  test2.qql  test3.qql  test5.qql
