[package]
name = "qstudiov3"
version = "0.1.0"
edition.workspace = true

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
egui-notify = "0.20.0"
egui_dock = "0.17.0"
egui_flex = "0.4.0"
egui_material_icons = "0.4.0"
egui_code_editor = { path = "../crates/egui_code_editor" }
theme = { path = "../crates/theme" }
engine = { path = "../engine" }
tokio = { version = "1.47.1", features = ["full"] }

polars = "0.49"
egui_plot = "0.33.0"
egui_commonmark = "0.21.1"
env_logger = "0.11.8"
log = "0.4.27"
chat-gpt-rs = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = "0.4.41"
