[package]
name = "qstudio"
version = "0.1.0"
edition.workspace = true
default-run = "qstudio"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

qstudio_tcp = { path = "../crates/qstudio_tcp" }
qstudio_ui = { path = "../crates/qstudio_ui" }
busbar = { path = "../crates/busbar" }
events = { path = "../crates/events" }
env_logger = "0.11.8"
log = "0.4.28"
crossbeam-channel = "0.5.6"
engine = { path = "../crates/engine" }