[package]
name = "busbar"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
log = "0.4.27"
crossbeam-channel = "0.5.6"
polars = "0.49"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.42"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
