[package]
name = "engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = "0.4.41"
indoc = "2.0.6"
polars = { version = "0.49", features = ["json", "dtype-struct", "strings", "lazy","dtype-decimal", "dtype-categorical"] }
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full", "test-util"] }
uuid = "1.17.0"
yahoo_finance_api = "4.0.0"
log = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
wgpu = "25.0.2"
env_logger = "0.10.0"

provider = { git = "https://github.com/jackrizza/provider.git", branch = "main" }
