[package]
name = "qstudio_ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
qstudio_tcp = { path = "../qstudio_tcp" }
busbar = { path = "../busbar" }
events = { path = "../events" }

eframe = { version = "0.32.0", features = ["wgpu", "default_fonts"] }
egui = "0.32.0"
egui-notify = "0.20.0"
egui_dock = "0.17.0"
egui_flex = "0.4.0"
egui_material_icons = "0.4.0"
egui_code_editor = { path = "../egui_code_editor" }
theme = { path = "../theme" }
engine = { path = "../engine" }
tokio = { version = "1.47.1", features = ["full"] }

polars = { version = "0.49", features = ["lazy"] }
egui_plot = "0.33.0"
egui_commonmark = "0.21.1"
log = "0.4.27"
chat-gpt-rs = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = "0.4.41"
egui_extras = "0.32.1"
egui_table = "0.4.0"
core_affinity = "0.8.3"
once_cell = "1.21.3"
crossbeam-channel = "0.5.11"