[package]
name = "theme"
version = "0.1.0"
edition.workspace = true

[dependencies]
egui26 = { version = "0.26", package = "egui", default-features = false, optional = true }
egui27 = { version = "0.27", package = "egui", default-features = false, optional = true }
egui28 = { version = "0.28", package = "egui", default-features = false, optional = true }
egui29 = { version = "0.29", package = "egui", default-features = false, optional = true }
egui30 = { version = "0.30", package = "egui", default-features = false, optional = true }
egui31 = { version = "0.31", package = "egui", default-features = false, optional = true }
egui32 = { version = "0.32", package = "egui", default-features = false, optional = true }


[dev-dependencies]
eframe = "0.32.0"

[features]
default = ["egui32"]
